--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Ike-Dian</title>
+    <link rel="shortcut icon" href="https://res.cloudinary.com/dmxzxo1fk/image/upload/v1740656343/favicon-32x32_miwy3c.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
